<resources>
    <string name="app_name">Legrooms</string>
    <string name="action_settings">Settings</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="or">OR</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="title_activity_maps">Spaces On Map</string>
</resources>
